// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component renders horizontal divider 1`] = `
@media  {
  .c-kLXyqk {
    background: var(--colors-tonal200);
  }

  .c-kLXyqk[data-orientation=horizontal] {
    height: 1px;
    width: 100%;
  }

  .c-kLXyqk[data-orientation=vertical] {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

<div>
  <div
    aria-orientation="horizontal"
    class="c-kLXyqk"
    data-orientation="horizontal"
  />
</div>
`;

exports[`Divider component renders vertical divider 1`] = `
@media  {
  .c-kLXyqk {
    background: var(--colors-tonal200);
  }

  .c-kLXyqk[data-orientation=horizontal] {
    height: 1px;
    width: 100%;
  }

  .c-kLXyqk[data-orientation=vertical] {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

<div>
  <div
    aria-orientation="vertical"
    class="c-kLXyqk"
    data-orientation="vertical"
  />
</div>
`;
